---------------------------------------------------------------------------------------------------
Version: 1.6.0
  Features:
    - Simple and Compact layouts can now use even-sized mining drills (2x2 and 4x4 drills work now)
    - Added button hiding for drill/belt/power/logistic choices (Shift+Right-click on an icon)
    - Added an undo button
    - Tooltip and information display improvements
    - Now removes existing ghosts if new selection overlaps the previous selection
---------------------------------------------------------------------------------------------------
Version: 1.5.8
Date: 2023-11-29
  Bugfixes:
    - Fixed another crash in lane filling overlay when using Super Compact mode
---------------------------------------------------------------------------------------------------
Version: 1.5.7
Date: 2023-09-23
  Translation:
    - Added Polish translation (provided by WukuWukaCiapanos)
---------------------------------------------------------------------------------------------------
Version: 1.5.6
Date: 2023-09-14
  Bugfixes:
    - Added padding to the start of tooltips as a workaround to avoid text getting cut off
---------------------------------------------------------------------------------------------------
Version: 1.5.5
Date: 2023-08-27
  Bugfixes:
    - Fixed a crash in lane filling overlay when using Super Compact mode on irregular resource patches
---------------------------------------------------------------------------------------------------
Version: 1.5.4
Date: 2023-07-31
  Bugfixes:
    - Fixed active overlays not clearing after a migration
---------------------------------------------------------------------------------------------------
Version: 1.5.3
Date: 2023-07-28
  Bugfixes:
    - Fixed migrations breaking in saves with removed players
---------------------------------------------------------------------------------------------------
Version: 1.5.2
Date: 2023-07-25
  Features: