@@ -63,6 +63,7 @@ require_layout("blueprints")
 ---@field deconstruct_specification DeconstructSpecification
 ---@field miner MinerStruct
 ---@field pole PoleStruct
+---@field belt BeltStruct
 ---@field _preview_rectangle nil|uint64 LuaRendering.draw_rectangle
 ---@field _lane_info_rendering uint64[]
 ---@field _render_objects uint64[] LuaRendering objects
