@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:ccc17353c0b72fcf4fd3e2f5ed27f990b5f7b684c32410e9b41f6542ed214ecb
-size 572
+oid sha256:68db61c87fb098203a764e47f1525c056c1c6786d0a4409b9007ff7c0d41bb8f
+size 328
