@@ -21,6 +21,7 @@ layout.restrictions.lane_filling_info_available = false
 function layout:prepare_belt_layout(state)
 	local m = state.miner
 	local g = state.grid
+	local C = state.coords
 	local attempt = state.best_attempt
 
 	local power_poles = {}
@@ -35,12 +36,14 @@ function layout:prepare_belt_layout(state)
 	local function que_entity(t) builder_belts[#builder_belts+1] = t end
 
 	for _, miner in ipairs(attempt.miners) do
-		local index = miner.line * 2 + miner.stagger - 2
+		local index = miner.line
 		miner_lane_number = max(miner_lane_number, index)
 		if not miner_lanes[index] then miner_lanes[index] = {} end
 		local line = miner_lanes[index]
-		if line.last_x == nil or miner.center.x > line.last_x then
-			line.last_x = miner.center.x
+		line._index = index
+		local out_x = m.output_rotated[defines.direction[miner.direction]][1]
+		if line.last_x == nil or (miner.x+out_x) > line.last_x then
+			line.last_x = miner.x + out_x
 			line.last_miner = miner
 		end
 		line[#line+1] = miner
@@ -48,7 +51,7 @@ function layout:prepare_belt_layout(state)
 
 	local shift_x, shift_y = state.best_attempt.sx, state.best_attempt.sy
 
-	local function place_logistics(start_x, end_x, y)
+	local function place_logistics(lane, start_x, end_x, y)
 		local belt_start = 1 + shift_x + start_x
 		if start_x ~= 0 then
 			local miner = g:get_tile(shift_x+m.size, y)
@@ -72,8 +75,8 @@ function layout:prepare_belt_layout(state)
 			local miner1 = g:get_tile(x, y-1) --[[@as GridTile]]
 			local miner2 = g:get_tile(x, y+1) --[[@as GridTile]]
 			local miner3 = g:get_tile(x+3, y) --[[@as GridTile]]
-			local built = miner1.built_on == "miner" or miner2.built_on == "miner"
-			local capped = miner3.built_on == "miner"
+			local built = (miner1 and miner1.built_on == "miner") or (miner2 and miner2.built_on == "miner")
+			local capped = miner3 and miner3.built_on == "miner"
 			local pole_built = built or capped
 
 			if capped then
@@ -104,15 +107,13 @@ function layout:prepare_belt_layout(state)
 		end
 	end
 
-	local stagger_shift = 1
 	for i = 1, miner_lane_number do
 		local lane = miner_lanes[i]
 		if lane and lane.last_x then
 			local y = m.size + shift_y - 1 + (m.size + 2) * (i-1)
-			local x_start = stagger_shift % 2 == 0 and 3 or 0
-			place_logistics(x_start, lane.last_x, y)
+			local x_start = i % 2 == 0 and 3 or 0
+			place_logistics(lane, x_start, lane.last_x, y)
 		end
-		stagger_shift = stagger_shift + 1
 	end
 	return "expensive_deconstruct"
 end
