@@ -42,10 +42,10 @@ function layout:prepare_belt_layout(state)
 	state.miner_max_column = miner_max_column
 
 	for _, lane in ipairs(miner_lanes) do
-		table.sort(lane, function(a, b) return a.center.x < b.center.x end)
+		table.sort(lane, function(a, b) return a.x < b.x end)
 	end
 	---@param lane MinerPlacement[]
-	local function get_lane_length(lane) if lane then return lane[#lane].center.x end return 0 end
+	local function get_lane_length(lane) if lane then return lane[#lane].x end return 0 end
 	---@param lane MinerPlacement[]
 	local function get_lane_column(lane) if lane and #lane > 0 then return lane[#lane].column or 0 end return 0 end
 
@@ -56,8 +56,8 @@ function layout:prepare_belt_layout(state)
 		local lane1 = miner_lanes[i]
 		local lane2 = miner_lanes[i+1]
 
-		local y = attempt.sy + (m.size + 1) * i
-		local x0 = attempt.sx + 1
+		local y = attempt.sy - 1 + (m.size + 1) * i
+		local x0 = attempt.sx
 		
 		local column_count = max(get_lane_column(lane1), get_lane_column(lane2))
 		local indices = {}
@@ -65,7 +65,7 @@ function layout:prepare_belt_layout(state)
 		if lane2 then for _, v in ipairs(lane2) do indices[v.column] = v end end
 
 		for j = 1, column_count do
-			local x = x0 + m.near + m.size * (j-1)
+			local x = x0 + m.out_x + m.size * (j-1)
 			if indices[j] then
 				belts[#belts+1] = {
 					name=state.logistics_choice,
