@@ -277,4 +277,24 @@ data:extend{
 		flags = { "gui-icon" },
 		scale = 0.5,
 	},
+	{
+		type = "sprite",
+		name = "mpp_tooltip_category_mining_area",
+		filename = graphics.."tooltip-category-mining-area.png",
+		priority = "extra-high-no-scale",
+		size = 40,
+		mipmap_count = 2,
+		flags = { "gui-icon" },
+		scale = 0.5,
+	},
+	{
+		type = "sprite",
+		name = "mpp_tooltip_category_supply_area",
+		filename = graphics.."tooltip-category-supply-area.png",
+		priority = "extra-high-no-scale",
+		size = 40,
+		mipmap_count = 2,
+		flags = { "gui-icon" },
+		scale = 0.5,
+	},
 }
