@@ -4,8 +4,10 @@ Version: 1.6.0
     - Simple and Compact layouts can now use even-sized mining drills (2x2 and 4x4 drills work now)
     - Added button hiding for drill/belt/power/logistic choices (Shift+Right-click on an icon)
     - Added an undo button
-    - Tooltip and information display improvements
     - Now removes existing ghosts if new selection overlaps the previous selection
+    - Tooltip and information display improvements
+  Bugfixes:
+    - Now tries to find related underground belts by name when they are not properly defined in prototypes
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.8
 Date: 2023-11-29
